@@ -9,4 +9,5 @@ void buffer_init(buffer* b,ssize_t (*op)(),int fd,
   b->p=0;
   b->n=0;
   b->todo=NOTHING;
+  b->cookie=0;
 }
